feat: add reset-password page; - refactor: Passport layout page;
